edit tech stack

--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <!-- favicon -->
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <!-- Primary Meta Tags -->
-    <title>Dennis Kamau | Full Stack Software Engineer</title>
-    <meta name="title" content="Dennis Kamau | Full Stack Software Engineer" />
+    <title>Dennis Kamau | Software Engineer</title>
+    <meta name="title" content="Dennis Kamau | Software Engineer" />
     <meta
       name="description"
-      content="I am a Full-Stack TensorFlow-certified Machine Learning Engineer based in Nairobi, Kenya. My primary focus is building Softwares and Mobile Applications with Artificial Intelligence & Machine Learning."
+      content="I am a Software Engineer based in Nairobi, Kenya with 2+ years of experience. I build Web and Mobile Applications that harness the power of Artificial Intelligence."
     />
     <meta name="author" content="Dennis Kamau" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://denmau.me/" />
-    <meta
-      property="og:title"
-      content="Dennis Kamau | Full Stack Software Engineer"
-    />
+    <meta property="og:title" content="Dennis Kamau | Software Engineer" />
     <meta
       property="og:description"
       content="I am a Full-Stack TensorFlow-certified Machine Learning Engineer based in Nairobi, Kenya. My primary focus is on building Software, Mobile Applications and Machine Learning (ML) applications using TensorFlow."
@@ -28,15 +25,9 @@
     <meta property="og:image" content="./img/meta-tags-img.jpg" />
 
     <!-- Twitter -->
-    <meta
-      property="twitter:card"
-      content="Dennis Kamau | Full Stack Software Engineer"
-    />
+    <meta property="twitter:card" content="Dennis Kamau | Software Engineer" />
     <meta property="twitter:url" content="https://denmau.me/" />
-    <meta
-      property="twitter:title"
-      content="Dennis Kamau | Full Stack Software Engineer"
-    />
+    <meta property="twitter:title" content="Dennis Kamau | Software Engineer" />
     <meta
       property="twitter:description"
       content="I am a Full-Stack TensorFlow-certified Machine Learning Engineer based in Nairobi, Kenya. My primary focus is on building Software, Mobile Applications and Machine Learning (ML) applications using TensorFlow."
@@ -68,7 +59,7 @@
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Dennis Kamau | Full Stack ML Engineer</title>
+    <title>Dennis Kamau | Software Engineer</title>
 
     <!-- Restrict protocol to https-->
     <script>
@@ -149,14 +140,20 @@
             </div>
             <div>
               <p class="about-me-summary animate__animated animate__fadeIn">
-                I am a Software Engineer with frontend and backend skills.
-                Today, I am focusing on delivering APIs that scale. I am
-                TensorFlow-certified and I enjoy building and serving Machine
-                Learning models with TensorFlow. My skills span from software
-                design, building mobile applications with Flutter and Java, Web
-                applications with Vue.js, and the backend with Django or PHP. I
-                have experience with containers (Docker), API integrations, and
-                PowerBi.
+                I am a Software Engineer with 2+ years of experience in frontend
+                and backend development. I harness the power of Machine Learning
+                in my applications with TensorFlow and I am
+                <a
+                  href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5"
+                  target="_blank"
+                  >TensorFlow-certified</a
+                >.
+              </p>
+              <p class="about-me-summary animate__animated animate__fadeIn">
+                My skills span from building mobile applications with Flutter,
+                Web applications with Angular.js, and the backend with C# .NET
+                Core or Django. I have experience with Java, Python, Vue.js,
+                PHP, Containers (Docker) and PowerBi.
               </p>
             </div>
           </div>
@@ -216,8 +213,8 @@
           <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
-                <img src="img/vuejs.png" alt="vue.js" height="70" />
-                <span class="text-center">Vue.js</span>
+                <img src="img/angularjs.png" alt="Angular.js" height="70" />
+                <span class="text-center">Angular.js</span>
               </div>
             </div>
           </div>
@@ -233,8 +230,8 @@
           <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
-                <img src="img/php.png" alt="php" height="50" />
-                <!--<span class="text-center">PHP</span>-->
+                <img src="img/NET_logo.svg" alt="C# .NET" height="50" />
+                <!-- <span class="text-center">C# .NET</span> -->
               </div>
             </div>
           </div>
@@ -327,13 +324,14 @@
         </div>
 
         <p>
-          I am a Tensorflow certified
+          I am a
           <a
             href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5"
             target="_blank"
-            >Machine Learning Engineer</a
-          >. I enjoy building, optimizing and deploying models with TensorFlow,
-          Keras, openCV and more.
+            >Tensorflow certified</a
+          >
+          Machine Learning Engineer. I enjoy building, optimizing and deploying
+          models with TensorFlow, Keras, openCV and more.
         </p>
       </div>
     </section>
@@ -529,11 +527,7 @@
               <!-- as soon as I hoop my static site to a server -->
               <button
                 type="submit"
-                class="
-                  pageclip-form__submit
-                  btn btn-primary btn-form-submit
-                  rounded
-                "
+                class="pageclip-form__submit btn btn-primary btn-form-submit rounded"
               >
                 Send Message
               </button>
