improved contact accessibility

--- a/index.html
+++ b/index.html
@@ -557,16 +557,16 @@
             <div
               class="social-container"
               style="cursor: pointer"
-              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20development%20services';"
+              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
             >
-              <img src="img/iconmonstr-whatsapp.svg" alt="email" />
+              <img src="img/iconmonstr-whatsapp.svg" alt="whatsapp" />
             </div>
             <div
               class="color-black"
               style="cursor: pointer"
-              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20development%20services';"
+              onclick="window.location='tel:+254759360020';"
             >
-              <span class="ml-1"></span>+254759360020
+              <span class="ml-1"></span>+254 759 360 020
             </div>
           </div>
         </div>
