show download resume button on mobile

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                 PHP, Containers (Docker) and PowerBi.
               </p>
             </div>
+            <a
+              href="assets/Resume-Dennis-Kamau.pdf"
+              class="btn btn-primary download-resume-mobile"
+              >View Resume</a
+            >
           </div>
         </div>
       </div>
